# xqfactor

./: pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pypi-publish.yaml
src/xqfactor/: __init__.py  config.py  extension.py  factor.py  operators.py
src/xqfactor/analyzer/: __init__.py  base.py  datafetcher.py  ic.py  processor.py  quantilereturn.py  regression.py
tests/: test_config.py  test_factor.py
