[project]
name = "xqfactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xuanqi", email = "xuanqiraphael@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "xqdata[rq]>=0.2.2",
]

[project.scripts]
xqfactor = "xqfactor:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
