[project]
name = "xqfactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xuanqi", email = "xuanqiraphael@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "statsmodels>=0.14.6",
    "xqdata[rq]>=0.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
